--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div>
                 <!-- TODO: 11. Добавить ссылку на свой профиль в GitHub -->
                 <a
-                  href="[ссылка на ваш профиль в GitHub]"
+                  href="https://github.com/youfregze"
                   class="text-gray-700 text-xl font-semibold"
                   >Мой GitHub</a
                 >
